# krystal-cli

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  api.json  llm.md  readme.md
nu/: sample_krystal_pools.nu
scripts/nu/: krystal_pools.nu
src/: client.rs  error.rs  lib.rs  main.rs  models.rs  query.rs  utils.rs
src/cli/: app.rs  commands.rs  mod.rs  output.rs
tests/: cli_tests.rs  client_tests.rs  live_api_smoke.rs  mod.rs  query_tests.rs  utils_tests.rs
