[package]
name = "krystal-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "krystal-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
