[package]
name = "krystal-cli"
version = "0.1.0"
edition = "2024"

[features]
default = []
live-api-tests = []

[[bin]]
name = "krystal-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.46", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
url = "2.5.7"
